# openclaw-python

./: .env.example  .gitignore  00_从这里开始_START_HERE.md  ADVANCED_FEATURES_PLAN.md  ARCHITECTURE_FIX_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DETAILED_COMPARISON.md  DOCKER_完成总结.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  GATEWAY_ARCHITECTURE.md  GEMINI_SETUP_GUIDE.md  IMAGE_PROCESSING_IMPLEMENTATION.md  IMPLEMENTATION_REVIEW.md  IMPROVEMENTS_2026-01-28.md  INTEGRATION_COMPLETE.md  PRODUCTION_READY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  README_CN.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RESTART_AND_TEST.md  SECURITY_SUMMARY_CN.md  UPDATES_2026-01-28.md  pairing  pyproject.toml  start_clean.sh  start_gateway_with_telegram.py  test_gemini_fix.py  test_unified_server.py  verify_message_fix.py  差距分析_简明版.md
.backup_local_files/: dedupe.py  event_stream.py  types.py
.backup_local_files/sessions/: __init__.py  paths.py  store.py  transcripts.py
clawdbot/: __main__.py  cli.py
examples/: 01_basic_agent.py  02_with_tools.py  03_monitoring.py  04_api_server.py  05_telegram_bot.py  06_gemini_example.py  07_multi_provider.py  08_advanced_features.py  09_v0.6_features.py  10_gateway_telegram_bridge.py  13_test_refactor.py  README.md
openclaw/: __init__.py  app_cli.py  events.py  runtime_env.py
runbooks/: vm-operations-runbook.md
scripts/: test_tools_manual.sh
tests/: conftest.py  test_agent_loop.py  test_agent_session.py  test_auth.py  test_auth_rotation.py  test_compaction.py  test_context_pruning.py  test_e2e_context.py  test_e2e_tool_followup.py  test_failover.py  test_followup_message_conversion.py  test_formatting.py  test_gateway_state.py  test_message_conversion.py  test_pruning_live.py  test_queuing.py  test_runtime.py  test_sanitization.py  test_server_model_override.py  test_session.py  test_session_store.py  test_settings_manager.py  test_summarization.py  test_system_prompt_validation.py  test_thinking.py  test_token_accuracy_live.py  test_token_counting.py  test_tool_calling.py  test_tool_loop_orchestrator.py  test_tool_name_preservation.py  test_tool_policies.py  test_tools.py  test_tools_base.py  test_websocket.py  verify_phase1_fixes.py  verify_phase2_alignment.py
(+328 files in other folders)
